# jackfofs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  notes.md  release.md
src/: CMakeLists.txt  CMakePresets.json  CmakePresets.json  README.md  api.c  api.h  api_new.c  bug_list.md  config.h.in  controller.c  controller.h  ctrl_client.c  ctrl_client.h  debug.c  debug.h  dsp_client.c  dsp_client.h  dummy.c  fof_queue.c  fof_queue.h  fof_queue_old.h  jack_simple_client.c  jfofs.h  jfofs_main.c  jfofs_offline.h  jfofs_private.h  jfofs_types.h  main.c  main_shmem.c  manager.c  manager.h  manager_dummy.c  manager_dummy.h  mix_client.c  mix_client.h  non_blocking_server_example.c  notes.md  offline.c  offline.h  osc.c  (+29 more)
src/old/: CMakeLists.txt  jack_client.c  jack_client.h  main.c  mixer.c  mixer.h  time.c
src/tests/: CMakeLists.txt
src/workbench/: CMakeLists.txt  circular_buffer.c  controller.c  controller.h  inttypes.c  jfof_dsp.c  jfof_dsp.h  jfofs_private.h  jfofs_types.h  mix.c  mix.h  notes.md  process_queue.c  process_queue.h  sin_gen.c  sin_gen.h  test_main.c  test_mixer.c  test_process_queue.c  test_sin_gen.c
